src/app.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

button {
  border: none;
  background: none;
  cursor: pointer;
}

:root {
  --primary: #f4bdb9;
  --bg: #282828;
  --secondary: #fabd2f;
  --highlight: #c3e0da;
  --bg-dark: #1a1a1a;
  --text: #f5f5f5;

  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: dark;
  color: var(--text);
  background-color: var(--bg);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: var(--primary);
  text-decoration: inherit;
}
a:hover {
  color: var(--secondary);
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  display: flex;
  place-items: flex-start;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

.card {
  padding: 2em;
}

.button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: var(--bg-dark);
  cursor: pointer;
  transition: border-color 0.25s;
  color: var(--primary);
}
.button:hover {
  border-color: var(--primary);
}
.button:focus,
.button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

input {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  transition: border-color 0.25s;
  margin-bottom: 0.5em;
  color: var(--primary);
}

input:focus,
input:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
  border-color: var(--primary);
}

